--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 04 - Ex.01</title>
+    <style>
+        body {
+            background-color: rgb(105, 105, 173);
+            color: white;
+            font: normal 20pt Arial;
+        }
+
+        h1 {
+            color: yellowgreen;
+        }
+    </style>
 </head>
 <body>
-    olá, mundo!
+    <h1>olá, mundo!</h1>
+    <p>Já me livrei da maldição</p>
+    <script>
+        window.alert('Minha primeira mensagem!')
+        window.confirm('Está gostando de JS?')
+        window.prompt('Qual seu nome?')
+    </script>
 </body>
 </html>
