--- a/desafio01/index.html
+++ b/desafio01/index.html
@@ -20,8 +20,8 @@
             <!--Chama função adicionar ao clicar no botão--> 
             <input type="button" value="Adicionar" onclick="adicionar()"><br><br> 
             
-            <select name="flista" id="flista" size="6"></select>
-            <input type="button" value="Finalizar"><br><br>
+            <select name="flista" id="flista" size="6"></select><br>
+            <input type="button" value="Finalizar" onclick="finalizar()"><br><br>
         </div>
 
         <div id="res">
